Remove fix position on mobile for messages, main-nav and mail body

--- a/css/style.css
+++ b/css/style.css
@@ -887,6 +887,12 @@ body {
   .main-nav,
   .mail {
     width: 100%;
+    height: auto;
+    margin: 0;
+    position: relative;
+  }
+  .mail {
+    padding: 2rem;
   }
   .mail__options svg {
     width: 20px;
